# Alfredo

./: .coverage  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ANALISE_ARQUITETURAL_ALFREDO_AI.md  ARQUITETURA.md  Alfredo.py  Alfredo_testes.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  INSTALL.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  PLANO_ACAO_ARQUITETURAL.md  PLANO_REMOVER_OLLAMA_E_LEGADO.md  README.md  ROADMAP.md  SECURITY.md  alfredo_new.py  check_magic.py  conftest.py  docker-compose.yml  mypy.ini  profile.stats  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_magic_check.py  run_tests.bat  run_tests_coverage.bat  setup.bat  setup.py  (+4 more)
.github/: dependabot.yml
.github/chatmodes/: Alfredo.chatmode.md
.github/instructions/: first-prompt.instructions.md  groq-llms-full.instructions.md  second-prompt.instructions.md
.ia/docs/: MCP_Installation_Guide_Windows.md
.kiro/hooks/: docs-sync-hook.kiro.hook
.kiro/specs/interactive-cli/: design.md  requirements.md  tasks.md
.kiro/specs/refatoracao-clean-architecture/: design.md  requirements.md  tasks.md
.kiro/specs/sistema-funcional-completo/: design.md  requirements.md  tasks.md
.kiro/steering/: common-rules.md  diretrizes-arquitetura.md  product.md  structure.md  tech.md
api/: __init__.py
cli/: __init__.py  alfredo.py  audio_analyzer.py  clean.py  groq_status.py  model_config.py  pc_info.py  test_runner.py  video_local.py  youtube_ai.py  youtube_downloader.py
commands/: __init__.py  clean_command.py  groq_status.py  model_config_command.py  organizer_command.py  pc_info.py  test_runner.py
commands/video/: __init__.py  audio_analyzer.py  local_video.py  youtube_ai.py  youtube_downloader.py
config/: i18n.py  paths.py  settings.py
config/locales/en/: messages.json
config/locales/pt/: messages.json
config/prompts/: summary_template.md
core/: __init__.py  alfredo_core.py  interfaces.py  prompt_service.py  provider_factory.py
data/: README.md
docs/: ARCHITECTURE.md  DESIGN_PATTERNS.md  EXTENSION_GUIDE.md  GATEWAYS.md  QUALITY_TOOLS.md  VALIDATORS.md
examples/: .gitkeep  basic_usage.py  constants_demo.py  coverage_analysis_demo.py  design_patterns_demo.py  exception_demo.py  new_provider_template.py  theme_demo.py  validators_demo.py
integrations/: __init__.py  ai_provider.py
integrations/groq/: __init__.py  monitor.py  provider.py
integrations/ollama/: __init__.py  provider.py
legacy/services_old/: markdown_utils.py  ollama_provider.py
scripts/: clean_architecture_dependency_check.py  coverage_analysis.py  duplication_check.py  install.py  magic_values_check.py  migrate.py  quality_check.py  quality_dashboard.py  solid_compliance_check.py  test_all.py  validate_directory_structure.py  validate_extension_time.py
services/: groq_provider.py  markdown_utils.py  open_in_browser.py  prompt_service.py
src/: __init__.py  main.py
src/application/: __init__.py
src/application/gateways/: __init__.py  audio_extractor_gateway.py  storage_gateway.py  video_downloader_gateway.py
src/application/interfaces/: ai_provider.py  ai_strategy.py
src/application/services/: ai_strategy_context.py
src/application/use_cases/: process_local_video.py  process_youtube_video.py  transcribe_audio.py
src/config/: __init__.py  alfredo_config.py  constants.py  logging_config.py  settings.py  validators.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  audio_track.py  summary.py  transcription.py  video.py
src/domain/exceptions/: __init__.py  alfredo_errors.py
src/domain/repositories/: video_repository.py
src/domain/validators/: __init__.py  audio_validators.py  summary_validators.py  transcription_validators.py  url_validators.py  video_validators.py
src/infrastructure/: __init__.py
src/infrastructure/downloaders/: __init__.py  ytdlp_downloader.py
src/infrastructure/extractors/: __init__.py  ffmpeg_extractor.py
src/infrastructure/factories/: __init__.py  infrastructure_factory.py
src/infrastructure/providers/: __init__.py  groq_strategy.py  mock_provider_strategy.py  ollama_strategy.py  whisper_provider.py  whisper_strategy.py
src/infrastructure/repositories/: json_video_repository.py
src/infrastructure/storage/: __init__.py  filesystem_storage.py  json_storage_adapter.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  base_command.py  batch_command.py  command_registry.py  context.py  error_handler.py  interactive_cli.py  local_video_command.py  state.py  youtube_command.py
tests/: .gitkeep  README.md  conftest.py  simple_test.py  test_main.py  test_video_entity.py
tests/application/services/: test_ai_strategy_context.py
tests/application/use_cases/: test_process_youtube_video.py  test_transcribe_audio.py
tests/architecture/: test_architecture.py  test_factory_pattern.py
tests/bdd/: __init__.py  conftest.py  pytest_bdd_config.py  steps_dummy.py  test_domain_validation_bdd.py  test_dummy_bdd.py  test_youtube_processing_bdd.py
tests/bdd/features/: __init__.py  domain_validation.feature  dummy.feature  youtube_processing.feature
tests/bdd/step_defs/: __init__.py  (+4 more)
tests/config/: __init__.py  test_alfredo_config.py  test_settings.py
tests/e2e/: __init__.py  test_video_workflow.py
tests/fixtures/: __init__.py  base_fixtures.py  mock_dependencies.py  mock_infrastructure_factory.py  test_config.py
tests/integration/: test_ai_providers.py  test_batch_processing.py  test_config_personalization.py  test_end_to_end_processing.py  test_environment_validation.py  test_exception_integration.py  test_extensibility.py  test_html_open_fallback.py  test_html_structure.py  test_local_video_processing.py  test_youtube_processing.py
tests/performance/: __init__.py  test_long_video_performance.py  test_performance_benchmarks.py
tests/presentation/: __init__.py
tests/security/: __init__.py  test_input_validation_security.py
tests/shared/: test_utils.py
tests/unit/: test_commands.py  test_core.py  test_main_complete.py  test_polymorphic_behavior.py
(+114 files in other folders)
