[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "alfredo-ai"
description = "Assistente de IA para desenvolvimento de software"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alfredo AI", email = "alfredo@example.com"},
]
keywords = ["ai", "assistant", "development", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "asyncio-mqtt>=0.11.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.8.0",
    "redis>=4.0.0",
    "celery>=5.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "jsonschema>=4.0.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "bcrypt>=4.0.0",
    "aioredis>=2.0.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "elasticsearch>=8.0.0",
    "opensearch-py>=2.0.0",
    "pinecone-client>=2.2.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "streamlit>=1.25.0",
    "gradio>=3.40.0",
    "chainlit>=0.7.0",
    "langchain>=0.0.300",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-google>=0.0.5",
    "langchain-community>=0.0.10",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    "huggingface-hub>=0.16.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "wandb>=0.15.0",
    "mlflow>=2.5.0",
    "tensorboard>=2.13.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
    "sentry-sdk>=1.28.0",
    "newrelic>=8.0.0",
    "datadog-api-client>=2.15.0",
    "kubernetes>=27.0.0",
    "docker>=6.0.0",
    "boto3>=1.28.0",
    "azure-identity>=1.13.0",
    "azure-storage-blob>=12.17.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "twilio>=8.0.0",
    "sendgrid>=6.10.0",
    "slack-sdk>=3.21.0",
    "discord-py>=2.3.0",
    "telegram-bot>=20.0",
    "discord-py>=2.3.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "redis>=4.6.0",
    "rq>=1.15.0",
    "dramatiq>=1.14.0",
    "watchdog>=3.0.0",
    "inotify>=0.2.10",
    "psutil>=5.9.0",
    "gpustat>=1.1.0",
    "nvidia-ml-py>=12.0.0",
    "pynvml>=11.0.0",
    "cpuinfo>=9.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "termcolor>=2.3.0",
    "art>=5.9.0",
    "pyfiglet>=0.8.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.0",
    "inquirer>=3.1.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "fire>=0.5.0",
    "docopt>=0.6.2",
    "argparse>=1.4.0",
    "configargparse>=1.7.0",
    "dynaconf>=3.2.0",
    "pydantic-settings>=2.0.0",
    "python-decouple>=3.8.0",
    "environs>=9.5.0",
    "python-dotenv>=1.0.0",
    "confuse>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "jsonargparse>=4.24.0",
    "marshmallow>=3.20.0",
    "cerberus>=1.3.5",
    "voluptuous>=0.14.0",
    "schema>=0.7.5",
    "pydantic>=2.3.0",
    "attrs>=23.0.0",
    "cattrs>=23.0.0",
    "dataclasses-json>=0.6.0",
    "pydantic-yaml>=1.2.0",
    "ruamel-yaml>=0.17.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "tomlkit>=0.12.0",
    "configparser>=6.0.0",
    "keyring>=24.2.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.18.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "argon2-cffi>=21.3.0",
    "scrypt>=0.8.20",
    "hashlib2>=1.0.0",
    "secrets>=1.0.0",
    "uuid>=1.30",
    "shortuuid>=1.0.11",
    "nanoid>=2.0.0",
    "ulid-py>=1.1.0",
    "cuid>=0.4",
    "ksuid>=0.6",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-html>=3.2.0",
    "pytest-metadata>=3.0.0",
    "pytest-rerunfailures>=12.0",
    "pytest-randomly>=3.12.0",
    "pytest-freezer>=0.4.6",
    "pytest-env>=0.8.2",
    "pytest-memray>=1.5.0",
    "pytest-leaks>=0.3.1",
    "pytest-profiling>=1.7.0",
    "pytest-benchmark>=4.0.0",
    "pytest-clarity>=1.0.1",
    "pytest-icdiff>=0.6",
    "pytest-sugar>=0.9.7",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "pytest-check>=2.2.0",
    "pytest-depends>=1.0.1",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-datadir>=1.4.1",
    "pytest-tempdir>=0.2.0",
    "pytest-factoryboy>=2.5.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "mimesis>=11.0.0",
    "hypothesis>=6.82.0",
    "pytest-hypothesis>=1.0.0",
    "coverage>=7.3.0",
    "pytest-cov>=4.1.0",
    "codecov>=2.1.13",
    "coveralls>=3.3.1",
    "pytest-xdist>=3.3.0",
    "pytest-parallel>=0.1.1",
    "pytest-split>=0.8.1",
    "pytest-randomly>=3.12.0",
    "pytest-repeat>=0.9.1",
    "pytest-flake8>=1.1.1",
    "pytest-black>=0.3.12",
    "pytest-isort>=3.1.0",
    "pytest-mypy>=0.10.3",
    "pytest-pylint>=0.19.0",
    "pytest-bandit>=0.6.1",
    "pytest-safety>=2.3.0",
    "pytest-docker>=2.0.0",
    "pytest-postgresql>=5.0.0",
    "pytest-redis>=3.0.0",
    "pytest-mongodb>=2.2.0",
    "pytest-elasticsearch>=3.0.0",
    "pytest-localserver>=0.7.1",
    "pytest-socket>=0.6.0",
    "pytest-mock>=3.11.0",
    "pytest-monkeypatch>=1.0.0",
    "pytest-freezegun>=0.4.2",
    "freezegun>=1.2.0",
    "pytest-time-machine>=2.12.0",
    "pytest-responses>=0.23.1",
    "responses>=0.23.3",
    "pytest-httpx>=0.24.0",
    "httpx>=0.24.1",
    "pytest-aiohttp>=1.0.4",
    "aiohttp>=3.8.5",
    "pytest-asyncio>=0.21.1",
    "asyncio>=3.4.3",
    "pytest-trio>=0.8.0",
    "trio>=0.22.2",
    "pytest-twisted>=1.14.0",
    "twisted>=22.10.0",
    "pytest-qt>=4.2.0",
    "pytest-gui>=0.1.0",
    "pytest-playwright>=0.4.2",
    "playwright>=1.37.0",
    "pytest-selenium>=4.0.0",
    "selenium>=4.12.0",
    "pytest-flask>=1.2.0",
    "flask>=2.3.3",
    "pytest-django>=4.5.2",
    "django>=4.2.0",
    "pytest-fastapi>=0.1.0",
    "fastapi>=0.103.0",
    "pytest-starlette>=0.2.0",
    "starlette>=0.31.0",
    "pytest-tornado>=0.8.2",
    "tornado>=6.3.3",
    "pytest-celery>=0.0.0",
    "celery>=5.3.1",
    "pytest-redis>=3.0.0",
    "redis>=4.6.0",
    "pytest-rabbitmq>=3.0.0",
    "pika>=1.3.2",
    "pytest-kafka>=0.6.0",
    "kafka-python>=2.0.2",
    "pytest-mqtt>=0.2.0",
    "paho-mqtt>=1.6.1",
    "pytest-grpc>=0.8.0",
    "grpcio>=1.57.0",
    "grpcio-tools>=1.57.0",
    "pytest-protobuf>=0.1.0",
    "protobuf>=4.24.0",
    "pytest-thrift>=0.2.0",
    "thrift>=0.16.0",
    "pytest-avro>=0.5.0",
    "avro>=1.11.3",
    "pytest-parquet>=0.1.0",
    "pyarrow>=12.0.1",
    "pytest-hdf5>=0.6.0",
    "h5py>=3.9.0",
    "pytest-netcdf>=0.2.1",
    "netcdf4>=1.6.4",
    "pytest-zarr>=0.1.0",
    "zarr>=2.16.0",
    "pytest-dask>=0.3.0",
    "dask>=2023.8.1",
    "pytest-ray>=0.1.0",
    "ray>=2.6.3",
    "pytest-spark>=0.6.0",
    "pyspark>=3.4.1",
    "pytest-hadoop>=0.1.0",
    "hdfs>=2.7.0",
    "pytest-aws>=0.1.0",
    "boto3>=1.28.57",
    "pytest-azure>=0.1.0",
    "azure-storage-blob>=12.17.0",
    "pytest-gcp>=0.1.0",
    "google-cloud-storage>=2.10.0",
    "pytest-minio>=0.1.0",
    "minio>=7.1.17",
    "pytest-s3>=0.1.0",
    "moto>=4.2.0",
    "pytest-gsutil>=0.1.0",
    "gsutil>=5.25.0",
    "pytest-azure-storage>=0.1.0",
    "azure-storage-blob>=12.17.0",
    "pytest-google-cloud>=0.1.0",
    "google-cloud-storage>=2.10.0",
    "pytest-aws-xray>=0.1.0",
    "aws-xray-sdk>=2.12.0",
    "pytest-datadog>=0.1.0",
    "datadog-api-client>=2.15.0",
    "pytest-newrelic>=0.1.0",
    "newrelic>=8.0.0",
    "pytest-sentry>=0.1.0",
    "sentry-sdk>=1.30.0",
    "pytest-prometheus>=0.2.0",
    "prometheus-client>=0.17.1",
    "pytest-grafana>=0.1.0",
    "grafana-api>=1.0.3",
    "pytest-influxdb>=0.1.0",
    "influxdb-client>=1.36.1",
    "pytest-telegraf>=0.1.0",
    "telegraf>=0.2.5",
    "pytest-statsd>=0.1.0",
    "statsd>=4.0.1",
    "pytest-graphite>=0.1.0",
    "graphite-client>=0.1.0",
    "pytest-elastic-apm>=0.1.0",
    "elastic-apm>=6.19.0",
    "pytest-jaeger>=0.1.0",
    "jaeger-client>=4.8.0",
    "pytest-zipkin>=0.1.0",
    "py-zipkin>=1.3.0",
    "pytest-opentelemetry>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-exporter-zipkin>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-flask>=0.41b0",
    "opentelemetry-instrumentation-django>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-aiohttp>=0.41b0",
    "opentelemetry-instrumentation-tornado>=0.41b0",
    "opentelemetry-instrumentation-grpc>=0.41b0",
    "opentelemetry-instrumentation-kafka>=0.41b0",
    "opentelemetry-instrumentation-rabbitmq>=0.41b0",
    "opentelemetry-instrumentation-mqtt>=0.41b0",
    "opentelemetry-instrumentation-s3>=0.41b0",
    "opentelemetry-instrumentation-azure>=0.41b0",
    "opentelemetry-instrumentation-gcp>=0.41b0",
    "opentelemetry-instrumentation-aws>=0.41b0",
    "opentelemetry-instrumentation-docker>=0.41b0",
    "opentelemetry-instrumentation-kubernetes>=0.41b0",
    "opentelemetry-instrumentation-minio>=0.41b0",
    "opentelemetry-instrumentation-zipkin>=0.41b0",
    "opentelemetry-instrumentation-jaeger>=0.41b0",
    "opentelemetry-instrumentation-prometheus>=0.41b0",
    "opentelemetry-instrumentation-grafana>=0.41b0",
    "opentelemetry-instrumentation-influxdb>=0.41b0",
    "opentelemetry-instrumentation-telegraf>=0.41b0",
    "opentelemetry-instrumentation-statsd>=0.41b0",
    "opentelemetry-instrumentation-graphite>=0.41b0",
    "opentelemetry-instrumentation-elastic-apm>=0.41b0",
    "opentelemetry-instrumentation-zipkin>=0.41b0",
    "opentelemetry-instrumentation-jaeger>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry>=0.41b0",
    "opentelemetry-instrumentation-opentracing>=0.41b0",
    "opentelemetry-instrumentation-jaeger-client>=0.41b0",
    "opentelemetry-instrumentation-zipkin-client>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-client>=0.41b0",
    "opentelemetry-instrumentation-opentracing-client>=0.41b0",
    "opentelemetry-instrumentation-jaeger-server>=0.41b0",
    "opentelemetry-instrumentation-zipkin-server>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-server>=0.41b0",
    "opentelemetry-instrumentation-opentracing-server>=0.41b0",
    "opentelemetry-instrumentation-jaeger-agent>=0.41b0",
    "opentelemetry-instrumentation-zipkin-agent>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-agent>=0.41b0",
    "opentelemetry-instrumentation-opentracing-agent>=0.41b0",
    "opentelemetry-instrumentation-jaeger-collector>=0.41b0",
    "opentelemetry-instrumentation-zipkin-collector>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-collector>=0.41b0",
    "opentelemetry-instrumentation-opentracing-collector>=0.41b0",
    "opentelemetry-instrumentation-jaeger-query>=0.41b0",
    "opentelemetry-instrumentation-zipkin-query>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-query>=0.41b0",
    "opentelemetry-instrumentation-opentracing-query>=0.41b0",
    "opentelemetry-instrumentation-jaeger-ui>=0.41b0",
    "opentelemetry-instrumentation-zipkin-ui>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-ui>=0.41b0",
    "opentelemetry-instrumentation-opentracing-ui>=0.41b0",
    "opentelemetry-instrumentation-jaeger-storage>=0.41b0",
    "opentelemetry-instrumentation-zipkin-storage>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-storage>=0.41b0",
    "opentelemetry-instrumentation-opentracing-storage>=0.41b0",
    "opentelemetry-instrumentation-jaeger-ingester>=0.41b0",
    "opentelemetry-instrumentation-zipkin-ingester>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-ingester>=0.41b0",
    "opentelemetry-instrumentation-opentracing-ingester>=0.41b0",
    "opentelemetry-instrumentation-jaeger-spark>=0.41b0",
    "opentelemetry-instrumentation-zipkin-spark>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-spark>=0.41b0",
    "opentelemetry-instrumentation-opentracing-spark>=0.41b0",
    "opentelemetry-instrumentation-jaeger-es>=0.41b0",
    "opentelemetry-instrumentation-zipkin-es>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-es>=0.41b0",
    "opentelemetry-instrumentation-opentracing-es>=0.41b0",
    "opentelemetry-instrumentation-jaeger-cassandra>=0.41b0",
    "opentelemetry-instrumentation-zipkin-cassandra>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-cassandra>=0.41b0",
    "opentelemetry-instrumentation-opentracing-cassandra>=0.41b0",
    "opentelemetry-instrumentation-jaeger-kafka>=0.41b0",
    "opentelemetry-instrumentation-zipkin-kafka>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-kafka>=0.41b0",
    "opentelemetry-instrumentation-opentracing-kafka>=0.41b0",
    "opentelemetry-instrumentation-jaeger-zookeeper>=0.41b0",
    "opentelemetry-instrumentation-zipkin-zookeeper>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-zookeeper>=0.41b0",
    "opentelemetry-instrumentation-opentracing-zookeeper>=0.41b0",
    "opentelemetry-instrumentation-jaeger-consul>=0.41b0",
    "opentelemetry-instrumentation-zipkin-consul>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-consul>=0.41b0",
    "opentelemetry-instrumentation-opentracing-consul>=0.41b0",
    "opentelemetry-instrumentation-jaeger-etcd>=0.41b0",
    "opentelemetry-instrumentation-zipkin-etcd>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-etcd>=0.41b0",
    "opentelemetry-instrumentation-opentracing-etcd>=0.41b0",
    "opentelemetry-instrumentation-jaeger-nats>=0.41b0",
    "opentelemetry-instrumentation-zipkin-nats>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-nats>=0.41b0",
    "opentelemetry-instrumentation-opentracing-nats>=0.41b0",
    "opentelemetry-instrumentation-jaeger-nsq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-nsq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-nsq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-nsq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-pulsar>=0.41b0",
    "opentelemetry-instrumentation-zipkin-pulsar>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-pulsar>=0.41b0",
    "opentelemetry-instrumentation-opentracing-pulsar>=0.41b0",
    "opentelemetry-instrumentation-jaeger-rocketmq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-rocketmq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-rocketmq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-rocketmq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-activemq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-activemq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-activemq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-activemq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-hornetq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-hornetq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-hornetq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-hornetq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-artemis>=0.41b0",
    "opentelemetry-instrumentation-zipkin-artemis>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-artemis>=0.41b0",
    "opentelemetry-instrumentation-opentracing-artemis>=0.41b0",
    "opentelemetry-instrumentation-jaeger-qpid>=0.41b0",
    "opentelemetry-instrumentation-zipkin-qpid>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-qpid>=0.41b0",
    "opentelemetry-instrumentation-opentracing-qpid>=0.41b0",
    "opentelemetry-instrumentation-jaeger-rabbitmq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-rabbitmq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-rabbitmq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-rabbitmq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-mqtt>=0.41b0",
    "opentelemetry-instrumentation-zipkin-mqtt>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-mqtt>=0.41b0",
    "opentelemetry-instrumentation-opentracing-mqtt>=0.41b0",
    "opentelemetry-instrumentation-jaeger-coap>=0.41b0",
    "opentelemetry-instrumentation-zipkin-coap>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-coap>=0.41b0",
    "opentelemetry-instrumentation-opentracing-coap>=0.41b0",
    "opentelemetry-instrumentation-jaeger-amqp>=0.41b0",
    "opentelemetry-instrumentation-zipkin-amqp>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-amqp>=0.41b0",
    "opentelemetry-instrumentation-opentracing-amqp>=0.41b0",
    "opentelemetry-instrumentation-jaeger-stomp>=0.41b0",
    "opentelemetry-instrumentation-zipkin-stomp>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-stomp>=0.41b0",
    "opentelemetry-instrumentation-opentracing-stomp>=0.41b0",
    "opentelemetry-instrumentation-jaeger-xmpp>=0.41b0",
    "opentelemetry-instrumentation-zipkin-xmpp>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-xmpp>=0.41b0",
    "opentelemetry-instrumentation-opentracing-xmpp>=0.41b0",
    "opentelemetry-instrumentation-jaeger-irc>=0.41b0",
    "opentelemetry-instrumentation-zipkin-irc>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-irc>=0.41b0",
    "opentelemetry-instrumentation-opentracing-irc>=0.41b0",
    "opentelemetry-instrumentation-jaeger-slack>=0.41b0",
    "opentelemetry-instrumentation-zipkin-slack>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-slack>=0.41b0",
    "opentelemetry-instrumentation-opentracing-slack>=0.41b0",
    "opentelemetry-instrumentation-jaeger-discord>=0.41b0",
    "opentelemetry-instrumentation-zipkin-discord>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-discord>=0.41b0",
    "opentelemetry-instrumentation-opentracing-discord>=0.41b0",
    "opentelemetry-instrumentation-jaeger-telegram>=0.41b0",
    "opentelemetry-instrumentation-zipkin-telegram>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-telegram>=0.41b0",
    "opentelemetry-instrumentation-opentracing-telegram>=0.41b0",
    "opentelemetry-instrumentation-jaeger-whatsapp>=0.41b0",
    "opentelemetry-instrumentation-zipkin-whatsapp>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-whatsapp>=0.41b0",
    "opentelemetry-instrumentation-opentracing-whatsapp>=0.41b0",
    "opentelemetry-instrumentation-jaeger-signal>=0.41b0",
    "opentelemetry-instrumentation-zipkin-signal>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-signal>=0.41b0",
    "opentelemetry-instrumentation-opentracing-signal>=0.41b0",
    "opentelemetry-instrumentation-jaeger-matrix>=0.41b0",
    "opentelemetry-instrumentation-zipkin-matrix>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-matrix>=0.41b0",
    "opentelemetry-instrumentation-opentracing-matrix>=0.41b0",
    "opentelemetry-instrumentation-jaeger-wechat>=0.41b0",
    "opentelemetry-instrumentation-zipkin-wechat>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-wechat>=0.41b0",
    "opentelemetry-instrumentation-opentracing-wechat>=0.41b0",
    "opentelemetry-instrumentation-jaeger-line>=0.41b0",
    "opentelemetry-instrumentation-zipkin-line>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-line>=0.41b0",
    "opentelemetry-instrumentation-opentracing-line>=0.41b0",
    "opentelemetry-instrumentation-jaeger-viber>=0.41b0",
    "opentelemetry-instrumentation-zipkin-viber>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-viber>=0.41b0",
    "opentelemetry-instrumentation-opentracing-viber>=0.41b0",
    "opentelemetry-instrumentation-jaeger-kakao>=0.41b0",
    "opentelemetry-instrumentation-zipkin-kakao>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-kakao>=0.41b0",
    "opentelemetry-instrumentation-opentracing-kakao>=0.41b0",
    "opentelemetry-instrumentation-jaeger-facebook>=0.41b0",
    "opentelemetry-instrumentation-zipkin-facebook>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-facebook>=0.41b0",
    "opentelemetry-instrumentation-opentracing-facebook>=0.41b0",
    "opentelemetry-instrumentation-jaeger-instagram>=0.41b0",
    "opentelemetry-instrumentation-zipkin-instagram>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-instagram>=0.41b0",
    "opentelemetry-instrumentation-opentracing-instagram>=0.41b0",
    "opentelemetry-instrumentation-jaeger-twitter>=0.41b0",
    "opentelemetry-instrumentation-zipkin-twitter>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-twitter>=0.41b0",
    "opentelemetry-instrumentation-opentracing-twitter>=0.41b0",
    "opentelemetry-instrumentation-jaeger-linkedin>=0.41b0",
    "opentelemetry-instrumentation-zipkin-linkedin>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-linkedin>=0.41b0",
    "opentelemetry-instrumentation-opentracing-linkedin>=0.41b0",
    "opentelemetry-instrumentation-jaeger-youtube>=0.41b0",
    "opentelemetry-instrumentation-zipkin-youtube>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-youtube>=0.41b0",
    "opentelemetry-instrumentation-opentracing-youtube>=0.41b0",
    "opentelemetry-instrumentation-jaeger-tiktok>=0.41b0",
    "opentelemetry-instrumentation-zipkin-tiktok>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-tiktok>=0.41b0",
    "opentelemetry-instrumentation-opentracing-tiktok>=0.41b0",
    "opentelemetry-instrumentation-jaeger-reddit>=0.41b0",
    "opentelemetry-instrumentation-zipkin-reddit>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-reddit>=0.41b0",
    "opentelemetry-instrumentation-opentracing-reddit>=0.41b0",
    "opentelemetry-instrumentation-jaeger-quora>=0.41b0",
    "opentelemetry-instrumentation-zipkin-quora>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-quora>=0.41b0",
    "opentelemetry-instrumentation-opentracing-quora>=0.41b0",
    "opentelemetry-instrumentation-jaeger-stackoverflow>=0.41b0",
    "opentelemetry-instrumentation-zipkin-stackoverflow>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-stackoverflow>=0.41b0",
    "opentelemetry-instrumentation-opentracing-stackoverflow>=0.41b0",
    "opentelemetry-instrumentation-jaeger-github>=0.41b0",
    "opentelemetry-instrumentation-zipkin-github>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-github>=0.41b0",
    "opentelemetry-instrumentation-opentracing-github>=0.41b0",
    "opentelemetry-instrumentation-jaeger-gitlab>=0.41b0",
    "opentelemetry-instrumentation-zipkin-gitlab>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-gitlab>=0.41b0",
    "opentelemetry-instrumentation-opentracing-gitlab>=0.41b0",
    "opentelemetry-instrumentation-jaeger-bitbucket>=0.41b0",
    "opentelemetry-instrumentation-zipkin-bitbucket>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-bitbucket>=0.41b0",
    "opentelemetry-instrumentation-opentracing-bitbucket>=0.41b0",
    "opentelemetry-instrumentation-jaeger-jira>=0.41b0",
    "opentelemetry-instrumentation-zipkin-jira>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-jira>=0.41b0",
    "opentelemetry-instrumentation-opentracing-jira>=0.41b0",
    "opentelemetry-instrumentation-jaeger-confluence>=0.41b0",
    "opentelemetry-instrumentation-zipkin-confluence>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-confluence>=0.41b0",
    "opentelemetry-instrumentation-opentracing-confluence>=0.41b0",
    "opentelemetry-instrumentation-jaeger-trello>=0.41b0",
    "opentelemetry-instrumentation-zipkin-trello>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-trello>=0.41b0",
    "opentelemetry-instrumentation-opentracing-trello>=0.41b0",
    "opentelemetry-instrumentation-jaeger-asana>=0.41b0",
    "opentelemetry-instrumentation-zipkin-asana>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-asana>=0.41b0",
    "opentelemetry-instrumentation-opentracing-asana>=0.41b0",
    "opentelemetry-instrumentation-jaeger-notion>=0.41b0",
    "opentelemetry-instrumentation-zipkin-notion>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-notion>=0.41b0",
    "opentelemetry-instrumentation-opentracing-notion>=0.41b0",
    "opentelemetry-instrumentation-jaeger-obsidian>=0.41b0",
    "opentelemetry-instrumentation-zipkin-obsidian>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-obsidian>=0.41b0",
    "opentelemetry-instrumentation-opentracing-obsidian>=0.41b0",
    "opentelemetry-instrumentation-jaeger-roam>=0.41b0",
    "opentelemetry-instrumentation-zipkin-roam>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-roam>=0.41b0",
    "opentelemetry-instrumentation-opentracing-roam>=0.41b0",
    "opentelemetry-instrumentation-jaeger-logseq>=0.41b0",
    "opentelemetry-instrumentation-zipkin-logseq>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-logseq>=0.41b0",
    "opentelemetry-instrumentation-opentracing-logseq>=0.41b0",
    "opentelemetry-instrumentation-jaeger-zettel>=0.41b0",
    "opentelemetry-instrumentation-zipkin-zettel>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-zettel>=0.41b0",
    "opentelemetry-instrumentation-opentracing-zettel>=0.41b0",
    "opentelemetry-instrumentation-jaeger-anki>=0.41b0",
    "opentelemetry-instrumentation-zipkin-anki>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-anki>=0.41b0",
    "opentelemetry-instrumentation-opentracing-anki>=0.41b0",
    "opentelemetry-instrumentation-jaeger-remnote>=0.41b0",
    "opentelemetry-instrumentation-zipkin-remnote>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-remnote>=0.41b0",
    "opentelemetry-instrumentation-opentracing-remnote>=0.41b0",
    "opentelemetry-instrumentation-jaeger-supermemo>=0.41b0",
    "opentelemetry-instrumentation-zipkin-supermemo>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-supermemo>=0.41b0",
    "opentelemetry-instrumentation-opentracing-supermemo>=0.41b0",
    "opentelemetry-instrumentation-jaeger-mnemosyne>=0.41b0",
    "opentelemetry-instrumentation-zipkin-mnemosyne>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-mnemosyne>=0.41b0",
    "opentelemetry-instrumentation-opentracing-mnemosyne>=0.41b0",
    "opentelemetry-instrumentation-jaeger-ankidroid>=0.41b0",
    "opentelemetry-instrumentation-zipkin-ankidroid>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-ankidroid>=0.41b0",
    "opentelemetry-instrumentation-opentracing-ankidroid>=0.41b0",
    "opentelemetry-instrumentation-jaeger-quizlet>=0.41b0",
    "opentelemetry-instrumentation-zipkin-quizlet>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-quizlet>=0.41b0",
    "opentelemetry-instrumentation-opentracing-quizlet>=0.41b0",
    "opentelemetry-instrumentation-jaeger-kahoot>=0.41b0",
    "opentelemetry-instrumentation-zipkin-kahoot>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-kahoot>=0.41b0",
    "opentelemetry-instrumentation-opentracing-kahoot>=0.41b0",
    "opentelemetry-instrumentation-jaeger-duolingo>=0.41b0",
    "opentelemetry-instrumentation-zipkin-duolingo>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-duolingo>=0.41b0",
    "opentelemetry-instrumentation-opentracing-duolingo>=0.41b0",
    "opentelemetry-instrumentation-jaeger-babbel>=0.41b0",
    "opentelemetry-instrumentation-zipkin-babbel>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-babbel>=0.41b0",
    "opentelemetry-instrumentation-opentracing-babbel>=0.41b0",
    "opentelemetry-instrumentation-jaeger-rosetta>=0.41b0",
    "opentelemetry-instrumentation-zipkin-rosetta>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-rosetta>=0.41b0",
    "opentelemetry-instrumentation-opentracing-rosetta>=0.41b0",
    "opentelemetry-instrumentation-jaeger-memrise>=0.41b0",
    "opentelemetry-instrumentation-zipkin-memrise>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-memrise>=0.41b0",
    "opentelemetry-instrumentation-opentracing-memrise>=0.41b0",
    "opentelemetry-instrumentation-jaeger-lingoda>=0.41b0",
    "opentelemetry-instrumentation-zipkin-lingoda>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-lingoda>=0.41b0",
    "opentelemetry-instrumentation-opentracing-lingoda>=0.41b0",
    "opentelemetry-instrumentation-jaeger-busuu>=0.41b0",
    "opentelemetry-instrumentation-zipkin-busuu>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-busuu>=0.41b0",
    "opentelemetry-instrumentation-opentracing-busuu>=0.41b0",
    "opentelemetry-instrumentation-jaeger-hellotalk>=0.41b0",
    "opentelemetry-instrumentation-zipkin-hellotalk>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-hellotalk>=0.41b0",
    "opentelemetry-instrumentation-opentracing-hellotalk>=0.41b0",
    "opentelemetry-instrumentation-jaeger-tandem>=0.41b0",
    "opentelemetry-instrumentation-zipkin-tandem>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-tandem>=0.41b0",
    "opentelemetry-instrumentation-opentracing-tandem>=0.41b0",
    "opentelemetry-instrumentation-jaeger-speaky>=0.41b0",
    "opentelemetry-instrumentation-zipkin-speaky>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-speaky>=0.41b0",
    "opentelemetry-instrumentation-opentracing-speaky>=0.41b0",
    "opentelemetry-instrumentation-jaeger-conversationexchange>=0.41b0",
    "opentelemetry-instrumentation-zipkin-conversationexchange>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-conversationexchange>=0.41b0",
    "opentelemetry-instrumentation-opentracing-conversationexchange>=0.41b0",
    "opentelemetry-instrumentation-jaeger-mylanguageexchange>=0.41b0",
    "opentelemetry-instrumentation-zipkin-mylanguageexchange>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-mylanguageexchange>=0.41b0",
    "opentelemetry-instrumentation-opentracing-mylanguageexchange>=0.41b0",
    "opentelemetry-instrumentation-jaeger-italki>=0.41b0",
    "opentelemetry-instrumentation-zipkin-italki>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-italki>=0.41b0",
    "opentelemetry-instrumentation-opentracing-italki>=0.41b0",
    "opentelemetry-instrumentation-jaeger-verbling>=0.41b0",
    "opentelemetry-instrumentation-zipkin-verbling>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-verbling>=0.41b0",
    "opentelemetry-instrumentation-opentracing-verbling>=0.41b0",
    "opentelemetry-instrumentation-jaeger-preply>=0.41b0",
    "opentelemetry-instrumentation-zipkin-preply>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-preply>=0.41b0",
    "opentelemetry-instrumentation-opentracing-preply>=0.41b0",
    "opentelemetry-instrumentation-jaeger-cambly>=0.41b0",
    "opentelemetry-instrumentation-zipkin-cambly>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-cambly>=0.41b0",
    "opentelemetry-instrumentation-opentracing-cambly>=0.41b0",
    "opentelemetry-instrumentation-jaeger-vipkid>=0.41b0",
    "opentelemetry-instrumentation-zipkin-vipkid>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-vipkid>=0.41b0",
    "opentelemetry-instrumentation-opentracing-vipkid>=0.41b0",
    "opentelemetry-instrumentation-jaeger-dada>=0.41b0",
    "opentelemetry-instrumentation-zipkin-dada>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-dada>=0.41b0",
    "opentelemetry-instrumentation-opentracing-dada>=0.41b0",
    "opentelemetry-instrumentation-jaeger-magicears>=0.41b0",
    "opentelemetry-instrumentation-zipkin-magicears>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-magicears>=0.41b0",
    "opentelemetry-instrumentation-opentracing-magicears>=0.41b0",
    "opentelemetry-instrumentation-jaeger-51talk>=0.41b0",
    "opentelemetry-instrumentation-zipkin-51talk>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-51talk>=0.41b0",
    "opentelemetry-instrumentation-opentracing-51talk>=0.41b0",
    "opentelemetry-instrumentation-jaeger-amazingtalker>=0.41b0",
    "opentelemetry-instrumentation-zipkin-amazingtalker>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-amazingtalker>=0.41b0",
    "opentelemetry-instrumentation-opentracing-amazingtalker>=0.41b0",
    "opentelemetry-instrumentation-jaeger-engoo>=0.41b0",
    "opentelemetry-instrumentation-zipkin-engoo>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-engoo>=0.41b0",
    "opentelemetry-instrumentation-opentracing-engoo>=0.41b0",
    "opentelemetry-instrumentation-jaeger-rarejob>=0.41b0",
    "opentelemetry-instrumentation-zipkin-rarejob>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-rarejob>=0.41b0",
    "opentelemetry-instrumentation-opentracing-rarejob>=0.41b0",
    "opentelemetry-instrumentation-jaeger-nativecamp>=0.41b0",
    "opentelemetry-instrumentation-zipkin-nativecamp>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-nativecamp>=0.41b0",
    "opentelemetry-instrumentation-opentracing-nativecamp>=0.41b0",
    "opentelemetry-instrumentation-jaeger-qqenglish>=0.41b0",
    "opentelemetry-instrumentation-zipkin-qqenglish>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-qqenglish>=0.41b0",
    "opentelemetry-instrumentation-opentracing-qqenglish>=0.41b0",
    "opentelemetry-instrumentation-jaeger-ef>=0.41b0",
    "opentelemetry-instrumentation-zipkin-ef>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-ef>=0.41b0",
    "opentelemetry-instrumentation-opentracing-ef>=0.41b0",
    "opentelemetry-instrumentation-jaeger-wallstreetenglish>=0.41b0",
    "opentelemetry-instrumentation-zipkin-wallstreetenglish>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-wallstreetenglish>=0.41b0",
    "opentelemetry-instrumentation-opentracing-wallstreetenglish>=0.41b0",
    "opentelemetry-instrumentation-jaeger-berlitz>=0.41b0",
    "opentelemetry-instrumentation-zipkin-berlitz>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-berlitz>=0.41b0",
    "opentelemetry-instrumentation-opentracing-berlitz>=0.41b0",
    "opentelemetry-instrumentation-jaeger-inlingua>=0.41b0",
    "opentelemetry-instrumentation-zipkin-inlingua>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-inlingua>=0.41b0",
    "opentelemetry-instrumentation-opentracing-inlingua>=0.41b0",
    "opentelemetry-instrumentation-jaeger-lsi>=0.41b0",
    "opentelemetry-instrumentation-zipkin-lsi>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-lsi>=0.41b0",
    "opentelemetry-instrumentation-opentracing-lsi>=0.41b0",
    "opentelemetry-instrumentation-jaeger-kaplan>=0.41b0",
    "opentelemetry-instrumentation-zipkin-kaplan>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-kaplan>=0.41b0",
    "opentelemetry-instrumentation-opentracing-kaplan>=0.41b0",
    "opentelemetry-instrumentation-jaeger-shane>=0.41b0",
    "opentelemetry-instrumentation-zipkin-shane>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-shane>=0.41b0",
    "opentelemetry-instrumentation-opentracing-shane>=0.41b0",
    "opentelemetry-instrumentation-jaeger-eton>=0.41b0",
    "opentelemetry-instrumentation-zipkin-eton>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-eton>=0.41b0",
    "opentelemetry-instrumentation-opentracing-eton>=0.41b0",
    "opentelemetry-instrumentation-jaeger-harrow>=0.41b0",
    "opentelemetry-instrumentation-zipkin-harrow>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-harrow>=0.41b0",
    "opentelemetry-instrumentation-opentracing-harrow>=0.41b0",
    "opentelemetry-instrumentation-jaeger-winchester>=0.41b0",
    "opentelemetry-instrumentation-zipkin-winchester>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-winchester>=0.41b0",
    "opentelemetry-instrumentation-opentracing-winchester>=0.41b0",
    "opentelemetry-instrumentation-jaeger-rugby>=0.41b0",
    "opentelemetry-instrumentation-zipkin-rugby>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-rugby>=0.41b0",
    "opentelemetry-instrumentation-opentracing-rugby>=0.41b0",
    "opentelemetry-instrumentation-jaeger-cambridge>=0.41b0",
    "opentelemetry-instrumentation-zipkin-cambridge>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-cambridge>=0.41b0",
    "opentelemetry-instrumentation-opentracing-cambridge>=0.41b0",
    "opentelemetry-instrumentation-jaeger-oxford>=0.41b0",
    "opentelemetry-instrumentation-zipkin-oxford>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-oxford>=0.41b0",
    "opentelemetry-instrumentation-opentracing-oxford>=0.41b0",
    "opentelemetry-instrumentation-jaeger-harvard>=0.41b0",
    "opentelemetry-instrumentation-zipkin-harvard>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-harvard>=0.41b0",
    "opentelemetry-instrumentation-opentracing-harvard>=0.41b0",
    "opentelemetry-instrumentation-jaeger-yale>=0.41b0",
    "opentelemetry-instrumentation-zipkin-yale>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-yale>=0.41b0",
    "opentelemetry-instrumentation-opentracing-yale>=0.41b0",
    "opentelemetry-instrumentation-jaeger-mit>=0.41b0",
    "opentelemetry-instrumentation-zipkin-mit>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-mit>=0.41b0",
    "opentelemetry-instrumentation-opentracing-mit>=0.41b0",
    "opentelemetry-instrumentation-jaeger-stanford>=0.41b0",
    "opentelemetry-instrumentation-zipkin-stanford>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-stanford>=0.41b0",
    "opentelemetry-instrumentation-opentracing-stanford>=0.41b0",
    "opentelemetry-instrumentation-jaeger-caltech>=0.41b0",
    "opentelemetry-instrumentation-zipkin-caltech>=0.41b0",
    "opentelemetry-instrumentation-opentelemetry-caltech>=0.41b0",
    "opentelemetry-instrumentation-opentracing-caltech>=
